objects/Pepper_Data__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationID__c</fullName>
        <externalId>true</externalId>
        <label>ApplicationID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrower_State__c</fullName>
        <label>Borrower State</label>
        <picklist>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Mortgage Application Data</relationshipLabel>
        <relationshipName>Mortgage_Application_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Pepper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formula_Test__c</fullName>
        <formula>TEXT(CEILING(((Application_Date__c - DATE(YEAR(Application_Date__c ), 1, 1) + 1) + 
MOD(DATE(YEAR(Application_Date__c ), 1, 1) - DATE(1900, 1, 7), 7)) / 7)) +&apos;-&apos;+ TEXT(YEAR(Application_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_FK__c</fullName>
        <externalId>true</externalId>
        <label>Mortgage FK</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_class_name__c</fullName>
        <label>Product class name</label>
        <picklist>
            <picklistValues>
                <fullName>Near Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting New Settlement Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved Awaiting Outstanding Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approval with Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Documents Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Documents Received - Post Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Documents Received - Pre Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparation of Solicitor Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlement Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitor Instructions Issued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved in Principle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Documents Issued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Mortgage Application Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ApplicationID__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>x624639</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ApplicationID__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Detail__c</columns>
        <columns>Amount__c</columns>
        <columns>Channel__c</columns>
        <columns>CRM_Opportunity__c</columns>
        <columns>Product_class_name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApplicationID__c</field>
            <operation>equals</operation>
            <value>624639</value>
        </filters>
        <label>624639</label>
    </listViews>
    <nameField>
        <displayFormat>Data-{0000000}</displayFormat>
        <label>Pepper Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mortgage Application Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>